[project]
name = "mythweaver"
version = "0.1.0"
description = "Multimodal MCP-powered storytelling engine with map generation, world memory, and auto-quest system."
readme = "README.md"

# Gradio + Anthropic + Google + Modal all resolve reliably on 3.10–3.11.
requires-python = ">=3.10,<3.12"

dependencies = [
    # Anthropic SDK — 0.72.x is the last pre-1.x release widely published
    "anthropic>=0.72.0,<1.0.0",
    # OpenAI SDK (stable)
    "openai>=1.42.0",
    # Gemini SDK
    "google-generativeai>=0.4.0",
    # HuggingFace Hub
    "huggingface_hub>=0.23.0",
    # Stable diffusers
    "diffusers>=0.30.0",
    # Core infra
    "pydantic>=2.0.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    # Modal cloud execution
    "modal>=0.62.0",
    "gradio>=5.49.1",
    "mcp[cli]>=1.21.1",
]

[project.scripts]
mythweaver = "app:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
